Atualizando fontes e icones

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="midias/icons/icons8-rede-centralizada-50.png" type="image/png">
     <title>Social Networks</title>
 </head>
 <body>
@@ -33,6 +34,8 @@
 
     <footer>
         <p>site criado por <strong>João victor Da silva</strong></p>
+        <abbr title="Todas os icones usados neste site foram utilizados com base nas diretrizes dos seguintes:https://icons8.com.br">
+        Direitos de uso</abbr>
     </footer>
 </body>
 </html>
