--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
     </div>
 
     <footer>
-        <p>site criado por <strong>João victor Da silva</strong></p>
-        <abbr title="Todas os icones usados neste site foram utilizados com base nas diretrizes dos seguintes:https://icons8.com.br">
-        Direitos de uso</abbr>
+        <p>site criado por João victor Da silva</p>
+        <p class="Copyright">midias por <a href="https://icons8.com.br/" target="_blank">ICONS8.com</a></p>
     </footer>
 </body>
 </html>
