mudando os links

--- a/redes/index.html
+++ b/redes/index.html
@@ -18,9 +18,9 @@
     </header>
 
     <main>
-        <a href="https://www.instagram.com/victor_silva_pk/" target="_blank">Instagram <img src="../midias/icons/icons8-instagram-30.png" alt=""></a>
-        <a href="https://www.linkedin.com/in/jo%C3%A3o-victor-108277235/" target="_blank">Linkedin <img src="../midias/icons/icons8-linkedin-64.png" alt=""></a>
-        <a href="https://github.com/VICTORpk" target="_blank">GitHub <img src="../midias/icons/icons8-github-32.png" alt=""></a>
+        <a href="https://animesonline.cc/" target="_blank">animes<img src="../midias/icons/icons8-instagram-30.png" alt=""></a>
+        <a href="https://addons.mozilla.org/pt-BR/firefox/addon/adblock-for-firefox/" target="_blank">Ad block<img src="../midias/icons/icons8-linkedin-64.png" alt=""></a>
+        <a href="https://pobreflix.biz/" target="_blank">filmes<img src="../midias/icons/icons8-github-32.png" alt=""></a>
     </main>
 
     <footer>
